has errors, if you dont call enigma it runs fine

--- a/PWKeeper/app/src/main/res/layout/activity_main_screen2.xml
+++ b/PWKeeper/app/src/main/res/layout/activity_main_screen2.xml
@@ -30,6 +30,7 @@
         android:text="Encrypt"
         android:layout_centerHorizontal="true"
         android:gravity="center"
+        android:onClick="encrypt"
         tools:layout_editor_absoluteX="225dp"
         tools:layout_editor_absoluteY="78dp" />
     </LinearLayout>
@@ -37,11 +38,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="75dp">
 
     <ListView
         android:id="@+id/display"
-        android:layout_width="366dp"
+        android:layout_width="match_parent"
         android:layout_height="268dp"
          />
 
